# Synapse

./: .gitignore  CLAUDE.md  README.md
PRD/: PRD.md
architecture/: agent.md  backend.md  crawler.md  database.md  overview.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agent.py  crawler.py  intelligence.py  platforms.py
backend/app/api/v1/schemas/: agent.py  intelligence.py  platforms.py
backend/app/core/: __init__.py
backend/app/core/agent/: __init__.py  critic.py  executor.py  expander.py  orchestrator.py  planner.py  self_healer.py  state.py
backend/app/core/analysis/: entity_graph.py
backend/app/core/llm/: anthropic.py  gemini.py  router.py
backend/app/core/resilience/: __init__.py
backend/app/core/tools/: analyze_tool.py  base.py  memory_tool.py  registry.py  search_tool.py  synthesize_tool.py
backend/app/crawlers/: __init__.py  base.py
backend/app/crawlers/anti_detect/: __init__.py  anti_detect.py  proxy_pool.py  rate_limiter.py
backend/app/crawlers/douyin/: __init__.py
backend/app/crawlers/wechat/: __init__.py  crawler.py
backend/app/crawlers/xiaohongshu/: __init__.py  cookie_manager.py  crawler.py
backend/app/crawlers/zhihu/: __init__.py  crawler.py
backend/app/memory/: __init__.py  embedding_service.py  memory_manager.py  vector_store.py
backend/app/models/: __init__.py  base.py  embedding.py  intelligence.py  task.py
backend/app/services/: redis_service.py
insightsentinel/: App.tsx  README.md  index.html  (+5 more)
(+16 files in other folders)
